Page MenuHome GnuPG

incompatibility options --sign and --encrypt-files
Closed, ResolvedPublic

Description

This command works:
gpg --sign --encrypt-files file1.txt

But this one doesn't:
gpg --sign --encrypt-files file1.txt file2.txt

Error (IMHO line gpg.c:3442):
usage: gpg [options] --sign --encrypt [filename]

No clues about "sign" and "multifile" incompatibility in gpg manual. The issue
could be fixed in implementing a similar function like "encode_crypt_files" but
with "sign_file".

Details

Version
1.4.9

Event Timeline

Doomsday set Version to 1.4.9.
Doomsday added a subscriber: Doomsday.

From the manual:

--multifile

   This modifies certain other commands to accept multiple files for
processing on the command line or
   read  from  stdin with each filename on a separate line. This

allows for many files to be processed

at once. --multifile may currently be used along with --verify,

--encrypt, and --decrypt. Note that

--multifile --verify may not be used with detached signatures.

If we use "--multifile --sign", we got an error message:
gpg: --sign does not yet work with --multifile

A similar message can't be affected with "--multifile --sign --encrypt" ?

I understand. Such a diagnostic is of course possible.

Fixed in 6897bbf.

$ gpg2 --multifile --sign --encrypt-files /tmp/foo /tmp/bar
gpg: NOTE: THIS IS A DEVELOPMENT VERSION!
gpg: It is only intended for test purposes and should NOT be
gpg: used in a production environment or with production keys!
gpg: --sign --encrypt does not yet work with --multifile

neal claimed this task.
neal removed a project: In Progress.